--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ author_email: sp.sriharsha@redcrackle.com
 baseurl:
 url: ""
 permalink: pretty
-paginate_path: /page:num
+paginate: 5
+paginate_path: /blog/page:num
 timezone:      null
 defaults:
   -
@@ -40,6 +41,4 @@ sass:
 markdown: kramdown
 gems:
   - jekyll-feed
-exclude:
-  - Gemfile
-  - Gemfile.lock
+  - jekyll-paginate
